feat: 添加D1数据库支持和数据迁移功能

--- a/package.json
+++ b/package.json
@@ -112,5 +112,13 @@
   },
   "browser": {
     "crypto": false
+  },
+  "pnpm": {
+    "ignoredBuiltDependencies": [
+      "@tailwindcss/oxide",
+      "msw",
+      "sharp",
+      "unrs-resolver"
+    ]
   }
 }
